# michaelwilt

./: Michael_Wilt.py  README.md  pages.yaml  pyproject.toml  utilities.py
biblical_festivals/: countdown.html  festivals.yaml  utilities.py
css/: global.css  styles.css
pages/: About_Me.py  Biblical_Festivals.py  HomePage.py  Podcast_Dashboard.py  Prophet.py
